[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/PublicPixel-z84yD.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.5, 359 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.866667, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1

[node name="CountDownTimerLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -740.0
margin_top = -680.0
margin_right = 740.0
margin_bottom = 360.0
custom_colors/font_color = Color( 0.952941, 0.313726, 0.160784, 1 )
custom_fonts/font = SubResource( 3 )
text = "00:00"
align = 1
valign = 1

[node name="EnemyScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
custom_colors/font_color = Color( 0.85098, 0.847059, 0.866667, 1 )
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
valign = 1

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="WallTop" type="StaticBody2D" parent="."]
position = Vector2( 605, -12 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 35, 2 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 605, 728 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 35, 2 )
shape = SubResource( 1 )

[node name="WallLeft" type="Area2D" parent="."]
position = Vector2( -10, 365 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 0.5, -5 )
shape = SubResource( 2 )

[node name="WallRight" type="Area2D" parent="."]
position = Vector2( 1289, 365 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 0.5, -5 )
shape = SubResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="WallLeft" to="." method="_on_WallLeft_body_entered"]
[connection signal="body_entered" from="WallRight" to="." method="_on_WallRight_body_entered"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTimer_timeout"]
